[React, Amplify, SAM] Add Step function, lambda API

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,5 +53,17 @@
         ]
       }
     }
+  },
+  "function": {
+    "runPrepareFoods": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "sendMailErrorToAdmin": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
