--- a/execise-hel-sam-app/functions/change-picking-to-delivery/package.json
+++ b/execise-hel-sam-app/functions/change-picking-to-delivery/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delivery",
+  "name": "change-picking-to-delivery",
   "version": "1.0.0",
   "description": "Mock stock checker for NodeJS",
   "main": "app.js",
